--- a/fashion_blog_exercise/fashion_blog_css_starter/style.css
+++ b/fashion_blog_exercise/fashion_blog_css_starter/style.css
@@ -4,16 +4,23 @@
     text-decoration: none;
     font-weight: 300;
 }
-body {
 
+head {
+    font-size: 450px;
 }
+
 time {
-    color: lightgray;
-    font-size: 30px;
+    color: rgb(219, 219, 219);
+    font-size: 28px;
 }
 
 article {
     max-width: 900px;
+    
+}
+
+.continue {
+    float: right;
 }
 
 aside {
@@ -26,6 +33,8 @@ h1 {
 
 .stories {
     color: black;
+    font-size: 120%;
+    margin: 0;
 }
 
 a {
@@ -45,6 +54,7 @@ p {
     float: left;
     padding: 5px;
     line-height: 50px;
+    
 }
 
 
@@ -64,7 +74,8 @@ nav {
 #tagline {
     display: inline;
     margin: 0 0 0 20px;
-    color: lightgray;
+    color: rgb(155, 155, 155);
+    font-size: 20px;
 
 }
 
@@ -78,7 +89,7 @@ nav li {
 }
 ul {
     padding: 0px;
-    margin: 50px 0;
+    margin: 25px 0 50px 0;
     
 }
 
